---
source: tests/cli.rs
expression: output
---
| Type             | Modules                                                                                                                                                                   |
|------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| Import formats   | conllu, elan, exmaralda, git, graphml, meta, none, opus, path, ptb, relannis, saltxml, table, text, textgrid, bytealignedtoolbox, treetagger, webanno, whisper, xlsx, xml |
| Export formats   | conllu, exmaralda, graphml, meta, saltxml, sequence, table, textgrid, treetagger, xlsx                                                                                    |
| Graph operations | align, check, collapse, unstable:diff, divide, edit, filter, visualize, enumerate, link, map, move, revise, span, time, chunk, split, sleep, none                         |

Use `annatto info <name>` to get more information about one of the formats or graph operations.
